# ELDonationTracker

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IPC.py  JenkinsFile  MANIFEST.in  README  README.md  TODO  _config.yml  backup_participant.conf  call_settings.py  call_tracker.py  changelog.md  createHTML.py  design.py  design.ui  donation.py  donor.py  emojis  extralife_IO.py  extralifedonations.py  extralifedonations.spec  extralifeunittests.py  gui.py  index.md  mypy.ini  participant.conf  pypi.rst  pyproject.toml  readparticipantconf.py  release_template.md  requirements.in  requirements.txt  rich colors  settings.py  settings.ui  setup.cfg  setup.py  (+4 more)
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: RequestOutput.md  bug_report.md  docs.md  request-for-new-output-data.md
.github/workflows/: draft_release  linttest.yml  linuxbuild.yml  pythonpublish.yml  release-drafter.yml  release_drafter.yml  windowsbuild.yml
QTdesignerfiles/: about.ui  design.ui  logs.ui  main.ui  settings.ui  tracker.ui  update found.ui
docs/: conf.py  index.rst  installation.rst  participant_conf.rst  requirements.txt  usage.rst
docs/modules/: call_about.rst  call_settings.rst  call_tracker.rst  donation.rst  donor.rst  extralife_io.rst  extralifedonations.rst  gui.rst  ipc.rst  participant.rst  team.rst  team_participant.rst
docs/modules/api/: badge.rst  donation.rst  donor.rst  participant.rst  team.rst  team_participant.rst
docs/modules/ui/: call_about.rst  call_main_gui.rst  call_settings.rst  call_tracker.rst
docs/modules/utils/: extralife_io.rst  update_available.rst
eldonationtracker/: __init__.py  about.py  call_about.py  call_settings.py  call_tracker.py  cli.py  design.py  donation.py  donor.py  extralife_IO.py  extralife_io.py  extralifedonations.py  gui.py  ipc.py  participant.py  settings.py  team.py  team_participant.py  tracker.py
eldonationtracker/api/: badge.py  donation.py  donor.py  participant.py  team.py  team_participant.py
eldonationtracker/tests/: test.py  test_badge.py  test_donation.py  test_donor.py  test_extralife_io.py  test_extralifedonations.py  test_ipc.py  test_overall.py  test_participant.py  test_team.py  test_team_participant.py
eldonationtracker/tests/testJSON/: endof2018_donations.json  endof2018_participant.json
eldonationtracker/ui/: about.py  call_about.py  call_logs.py  call_main_gui.py  call_settings.py  call_tracker.py  logs.py  main_gui.py  settings.py  tracker.py
eldonationtracker/utils/: extralife_io.py  update_available.py
eldonationtracker/utils/tests/: test_extralife_io.py  test_update_available.py
testJSON/: donations_noname1.json
testOutput/: testfilename.txt
