[metadata]
name = eldonationtracker
author = Eric Mesa
author-email = eric@ericmesa.com
url = http://djotaku.github.io/ELDonationTracker/
version = attr: eldonationtracker.__init__.__version__
description =  A Python-based donation tracker for Extra Life streams
long_description = file: pypi.rst
keywords = extra life, XSplit, obs, livestreaming, video games
license = GPLv3
classifiers = 
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    PyQt5 >= 5.13.1, <= 5.14.1
    xdgenvpy == 2.2.2
    PyQt5-sip >= 4.19.19, <= 12.7.1
    semver == 2.9.1
