[metadata]
name = eldonationtracker
author = Eric Mesa
author-email = eric@ericmesa.com
url = http://djotaku.github.io/ELDonationTracker/
version = attr: eldonationtracker.__init__.__version__
description =  A Python-based donation tracker for Extra Life streams
long_description = file: pypi.rst
keywords = extra life, XSplit, obs, livestreaming, video games
license = GPLv3
classifiers = 
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    PyQt5 >= 5.14.2, <= 5.14.9
    xdgenvpy == 2.3.0
    PyQt5-sip >= 12.7.2, <= 12.7.9
    semver == 2.9.1
    requests == 2.23.0
    rich < 3.0