[metadata]
name = eldonationtracker
author = Eric Mesa
author-email = eric@ericmesa.com
url = http://djotaku.github.io/ELDonationTracker/
version = attr: eldonationtracker.__init__.__version__
description =  A Python-based donation tracker for Extra Life streams
long_description = file: pypi.rst
keywords = extra life, XSplit, obs, livestreaming, video games
license = GPLv3
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    xdgenvpy == 2.3.5
    PyQt5 == 5.15.2
    PyQt5-sip == 12.11.0
    PyQtWebEngine==5.15.6
    PyQtWebEngine-Qt5==5.15.2
    semver == 3.0.0.dev3
    requests == 2.28.1
    rich == 12.4.4
    donordrivepython == 1.4.4
